Ensure icons don't get cut off on the dashboard.

--- a/admin/resources/full.css
+++ b/admin/resources/full.css
@@ -311,6 +311,7 @@
 	background: url("feed.png") no-repeat left center;
 	text-decoration: none;
 	padding-left: 26px;
+	display: inline-block;
 }
 #block-list .greader a { background-image: url("greader.png"); }
 
